Added county select Dropdown in user registration form.

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -65,6 +65,10 @@
     <%= f.text_field :state %>
   </div>
 
+  <div><%= f.label :country %><br />
+    <%= country_select( "user", "country" ) %>
+  </div>
+
   <div><%= f.label :phone_number %><br />
     <%= f.text_field :phone_number %>
   </div>
