--- a/app/views/home/landing.html.erb
+++ b/app/views/home/landing.html.erb
@@ -1,2 +1,3 @@
 <h1>Blue Compass</h1>
+<%= link_to "Edit User Information", edit_user_registration_path %>
 <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>
