--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,85 +1,123 @@
-<h2>Sign up</h2>
-
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
-
-  <div>
-    <%= f.label :first_name %><br />
-    <%= f.text_field :first_name, autofocus: true %>
+<div class="container-fluid">
+  <div class="right-body">
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-12">
+          <div class="row">
+            <div class="col-xs-10 col-xs-offset-1">
+              <h3 class="page-title text-center"><i class="fa fa-rocket"></i> Create a Blue Kompass account.</h3>
+            </div>
+          </div>
+          <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+            <%= devise_error_messages! %>
+            <div class="sign-up-form form-horizontal">
+              <div class="row">
+                <div class="col-xs-6 col-xs-offset-3">
+                  <div class="form-group">
+                    <label class="col-xs-4 control-label">Name</label>
+                    <div class="col-xs-8">
+                      <%= f.text_field :first_name, autofocus: true, placeholder: "Enter first name required", class: "form-control" %>
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <label class="col-xs-4 control-label">Last Name</label>
+                    <div class="col-xs-8">
+                      <%= f.text_field :last_name, placeholder: "Enter last name", class: "form-control" %>
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <label class="col-xs-4 control-label">Email</label>
+                    <div class="col-xs-8">
+                      <%= f.email_field :email, placeholder: "Enter valid email address", class: "form-control" %>
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <label class="col-xs-4 control-label">Password</label>
+                    <div class="col-xs-8">
+                      <%= f.password_field :password, placeholder: "Choose strong password", class: "form-control" %>
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <label class="col-xs-4 control-label">Confirm Password</label>
+                    <div class="col-xs-8">
+                      <%= f.password_field :password_confirmation, placeholder: "Retype Password", class: "form-control" %>
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <label class="col-xs-4 control-label">Company Name</label>
+                    <div class="col-xs-8">
+                      <%= f.text_field :company_name, placeholder: "Enter Company Name", class: "form-control" %>
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <label class="col-xs-4 control-label">Company Registration No.</label>
+                    <div class="col-xs-8">
+                        <%= f.text_field :company_registration_number, placeholder: "Enter Company Registration Number", class: "form-control" %>
+                      </div>
+                  </div>
+                  <div class="form-group">
+                    <label class="col-xs-4 control-label">Address Line 1</label>
+                    <div class="col-xs-8">
+                      <%= f.text_field :address_line_1, placeholder: "Address Line 1", class: "form-control" %>
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <label class="col-xs-4 control-label">Address Line 2 <span class="text-xs">(Optional)</span></label>
+                    <div class="col-xs-8">
+                      <%= f.text_field :address_line_2, placeholder: "Address Line 2", class: "form-control" %>
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <label class="col-xs-4 control-label">Address Line 3 <span class="text-xs">(Optional)</span></label>
+                    <div class="col-xs-8">
+                      <%= f.text_field :address_line_3, placeholder: "Address Line 3", class: "form-control" %>
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <label class="col-xs-4 control-label">Postcode</label>
+                    <div class="col-xs-4">
+                      <%= f.text_field :post_code, placeholder: "Valid Postal code", class: "form-control" %>
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <label class="col-xs-4 control-label">City</label>
+                    <div class="col-xs-6">
+                      <%= f.text_field :city, placeholder: "City name", class: "form-control" %>
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <label class="col-xs-4 control-label">Region/State <span class="text-xs">(Optional)</span></label>
+                    <div class="col-xs-6">
+                      <%= f.text_field :state, placeholder: "State name", class: "form-control" %>
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <label class="col-xs-4 control-label">Country</label>
+                    <div class="col-xs-6">
+                      <%= country_select( "user", "country", {}, { class: 'form-control selecter'}) %>
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <label class="col-xs-4 control-label">Phone Number <span class="text-xs">(Optional)</span></label>
+                    <div class="col-xs-6">
+                      <%= f.text_field :phone_number, placeholder: "Contact Number", class: "form-control" %>                    
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <label class="col-xs-4 control-label">Preferred Currency</label>
+                    <div class="col-xs-6">
+                      <%= f.text_field :preferred_currency, placeholder: "Currency", class: "form-control" %>
+                    </div>
+                  </div>
+                  <div class="form-group text-center seperator-25">
+                    <%= f.submit "Submit", class: 'btn btn-success' %>
+                  </div>
+                </div>
+              </div>
+            </div>
+          <%end%>  
+        </div>
+      </div>
+    </div>
   </div>
-
-  <div>
-    <%= f.label :last_name %><br />
-    <%= f.text_field :last_name %>
-  </div>
-
-  <div><%= f.label :email %><br />
-    <%= f.email_field :email %>
-  </div>
-
-  <div>
-    <%= f.label :password %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-  </div>
-
-  <div>
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-  
-  <div>
-    <%= f.label :company_name %><br />
-    <%= f.text_field :company_name %>
-  </div>
-
-  <div>
-    <%= f.label :company_registration_number %><br />
-    <%= f.text_field :company_registration_number %>
-  </div>
-
-  <div>
-    <%= f.label :address_line_1 %><br />
-    <%= f.text_field :address_line_1 %>
-  </div>
-
-  <div>
-    <%= f.label :address_line_2 %><br />
-    <%= f.text_field :address_line_2 %>
-  </div>
-
-  <div>
-    <%= f.label :address_line_3 %><br />
-    <%= f.text_field :address_line_3 %>
-  </div>
-
-  <div>
-    <%= f.label :post_code %><br />
-    <%= f.text_field :post_code%>
-  </div>
-
-  <div><%= f.label :city %><br />
-    <%= f.text_field :city %>
-  </div>
-
-  <div><%= f.label :state %><br />
-    <%= f.text_field :state %>
-  </div>
-
-  <div><%= f.label :country %><br />
-    <%= country_select( "user", "country" ) %>
-  </div>
-
-  <div><%= f.label :phone_number %><br />
-    <%= f.text_field :phone_number %>
-  </div>
-
-  <div><%= f.label :preferred_currency %><br />
-    <%= f.text_field :preferred_currency %>
-  </div>
-
-  <div>
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
