--- a/app/views/home/landing.html.erb
+++ b/app/views/home/landing.html.erb
@@ -10,67 +10,68 @@
             </ul>
             <div class="tab-content">
               <div class="tab-pane active" id="tab-p1">
-                <div class="row">
-                  <div class="col-xs-12 search-list">
-                    <div class="search-row">
-                      <div class="row search-item">
-                        <div class="col-xs-3">
-                          <div class="form-group">
-                            <label for="frm-search">
-                              From
-                            </label>
-                            <input class="form-control" type="search" placeholder="Source" id="frm-search">
+                <%= form_tag search_freights_path, method: :get do%>
+                  <div class="row">
+                    <div class="col-xs-12 search-list">
+                      <div class="search-row">
+                        <div class="row search-item">
+                          <div class="col-xs-3">
+                            <div class="form-group">
+                              <label for="frm-search">
+                                From
+                              </label>
+                              <%= text_field_tag "source", nil, class: "form-control", id: "frm-search", placeholder: "Source" %>
+                            </div>
                           </div>
-                        </div>
-                        <div class="col-xs-3">
-                          <div class="form-group">
-                            <label for="to-search">
-                              To
-                            </label>
-                            <input class="form-control" type="search" placeholder="Destination" id="to-search">
+                          <div class="col-xs-3">
+                            <div class="form-group">
+                              <label for="to-search">
+                                To
+                              </label>
+                              <%= text_field_tag "destination", nil, class: "form-control", id: "to-search", placeholder: "Destination" %>
+                            </div>
                           </div>
-                        </div>
-                        <div class="col-xs-2">
-                          <div class="form-group">
-                            <label for="hm-date">
-                              Date
-                            </label>
-                            <div class="input-group date">
-                            <input class="form-control" type="text" placeholder="mm/dd/yyyy" id="hm-date" data-provide="datepicker">
-                            <span class="input-group-addon">
-                              <i class="fa fa-calendar"></i>
-                            </span>
+                          <div class="col-xs-2">
+                            <div class="form-group">
+                              <label for="hm-date">
+                                Date
+                              </label>
+                              <div class="input-group date">
+                              <%= text_field_tag "date", nil, class: "form-control", id: "hm-date", placeholder: "mm/dd/yyyy", data: {provide: "datepicker"}  %>
+                              <span class="input-group-addon">
+                                <i class="fa fa-calendar"></i>
+                              </span>
+                              </div>
+                            </div>
+                          </div>
+                          <div class="col-xs-2">
+                            <div class="form-group">
+                              <label for="hm-cbm">
+                                Cbm
+                              </label>
+                              <%= text_field_tag "cbm", nil, class: "form-control", id: "hm-cbm", placeholder: "Cbm" %>
+                            </div>
+                          </div>
+                          <div class="col-xs-2">
+                            <div class="form-group">
+                              <label for="hm-weight">
+                                Kg
+                              </label>
+                              <%= text_field_tag "cbm", nil, class: "form-control", id: "hm-weight", placeholder: "Weight" %>
                             </div>
                           </div>
                         </div>
-                        <div class="col-xs-2">
-                          <div class="form-group">
-                            <label for="hm-cbm">
-                              Cbm
-                            </label>
-                            <input class="form-control" type="text" placeholder="Cbm" id="hm-cbm">
-                          </div>
-                        </div>
-                        <div class="col-xs-2">
-                          <div class="form-group">
-                            <label for="hm-weight">
-                              Kg
-                            </label>
-                            <input class="form-control" type="text" placeholder="Weight" id="hm-weight">
-                          </div>
-                        </div>
                       </div>
-                    </div>
-                    <div class="form-group text-right">
-                      <button type="button" class="btn btn-info btn-sm" id="search-more-btn"><i class="fa fa-plus"></i> Add more</button>
-                    </div>  
+                      <div class="form-group text-right">
+                        <button type="button" class="btn btn-info btn-sm" id="search-more-btn"><i class="fa fa-plus"></i> Add more</button>
+                      </div>  
 
+                    </div>
                   </div>
-                </div>
-              
-                <div class="form-group text-center seperator-20">
-                  <button class="btn btn-primary" type="button" id="home-search">Search</button>
-                </div>
+                  <div class="form-group text-center seperator-20">
+                    <%= submit_tag 'Search', id: "home-search", class: "btn btn-primary"%>
+                  </div>
+                <%end%>
               </div>
             </div>
           </div>
