--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -53,7 +53,7 @@
             </div>
           </div>
           <div class="modal-footer">
-              <a href="#"><i class="fa fa-rocket"></i> Create an account</a>
+              <a href="/users/sign_up"><i class="fa fa-rocket"></i> Create an account</a>
           </div>
         </div>
       </div>
