--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -111,7 +111,7 @@ body {padding-top: 50px;font-size: 14px;margin-bottom: 180px;font-family: 'open_
 .datepicker {z-index: 1050 !important}
 .input-group.date .input-group-addon {cursor: pointer;}
 
-.selecter .selecter-selected {border-radius: 0;border-color: #96deff;height: 32px;color: }
+.selecter .selecter-selected {border-radius: 0;border-color: #96deff;height: 32px;}
 
 /*************** =bootstrap ****************/
 .clean-modal .modal-dialog {margin-top: 120px;}
