--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,14 +7,21 @@
         <li></li>
       </ul>
     </button>
-    <a class="navbar-brand" href="index.html" title="Home">Blue Kompass</a>
+    <%=link_to "Blue Compass", root_path, {class: 'navbar-brand'} %>
     <div class="pull-right">
       <ul class="nav navbar-nav navbar-right header-links">
         <li><a href="#" data-toggle="tooltip" data-placement="left" title="Call Support"><i class="fa fa-phone"></i> +91-1234567890</a></li>
         <li><a href="#" data-toggle="tooltip" data-placement="bottom" title="Email Support"><i class="fa fa-envelope"></i> Support</a></li>
-        <li><a href="#login-modal" data-toggle="modal"><i class="fa fa-sign-in"></i> Login</a></li>
-        <li class="hidden"><a href="#">Logout</a></li>
+        <% if user_signed_in? %>
+          <li><%= link_to "Lagout", destroy_user_session_path, method: :delete %></li>
+        <% else %>
+          <li><a href="#" id="login-link"><i class="fa fa-sign-in"></i> Login</a></li>
+        <% end %>
       </ul>
     </div>
   </div>
 </header>
+
+<% unless user_signed_in?%>
+  <%= render template: "devise/sessions/new", locals: { resource: User.new, resource_name: "user" }%>
+<% end %>
