--- a/app/views/home/landing.html.erb
+++ b/app/views/home/landing.html.erb
@@ -20,7 +20,7 @@
                               <label for="frm-search">
                                 From
                               </label>
-                              <%= text_field_tag "source", nil, class: "form-control", id: "frm-search", placeholder: "Source" %>
+                              <%= text_field_tag "search[source]", nil, class: "form-control", id: "frm-search", placeholder: "Source" %>
                             </div>
                           </div>
                           <div class="col-xs-3">
@@ -28,7 +28,7 @@
                               <label for="to-search">
                                 To
                               </label>
-                              <%= text_field_tag "destination", nil, class: "form-control", id: "to-search", placeholder: "Destination" %>
+                              <%= text_field_tag "search[destination]", nil, class: "form-control", id: "to-search", placeholder: "Destination" %>
                             </div>
                           </div>
                           <div class="col-xs-2">
@@ -37,7 +37,7 @@
                                 Date
                               </label>
                               <div class="input-group date">
-                              <%= text_field_tag "date", nil, class: "form-control", id: "hm-date", placeholder: "mm/dd/yyyy", data: {provide: "datepicker"}  %>
+                              <%= text_field_tag "search[date]", nil, class: "form-control", id: "hm-date", placeholder: "mm/dd/yyyy", data: {provide: "datepicker"}  %>
                               <span class="input-group-addon">
                                 <i class="fa fa-calendar"></i>
                               </span>
@@ -49,7 +49,7 @@
                               <label for="hm-cbm">
                                 Cbm
                               </label>
-                              <%= text_field_tag "cbm", nil, class: "form-control", id: "hm-cbm", placeholder: "Cbm" %>
+                              <%= text_field_tag "search[cbm]", nil, class: "form-control", id: "hm-cbm", placeholder: "Cbm" %>
                             </div>
                           </div>
                           <div class="col-xs-2">
@@ -57,7 +57,7 @@
                               <label for="hm-weight">
                                 Kg
                               </label>
-                              <%= text_field_tag "cbm", nil, class: "form-control", id: "hm-weight", placeholder: "Weight" %>
+                              <%= text_field_tag "search[weight]", nil, class: "form-control", id: "hm-weight", placeholder: "Weight" %>
                             </div>
                           </div>
                         </div>
