--- a/app/views/home/landing.html.erb
+++ b/app/views/home/landing.html.erb
@@ -10,7 +10,7 @@
             </ul>
             <div class="tab-content">
               <div class="tab-pane active" id="tab-p1">
-                <%= form_tag search_freights_path, method: :get do%>
+                <%= form_tag search_freights_path, method: :post do%>
                   <div class="row">
                     <div class="col-xs-12 search-list">
                       <div class="search-row">
@@ -20,7 +20,7 @@
                               <label for="frm-search">
                                 From
                               </label>
-                              <%= text_field_tag "search[source]", nil, class: "form-control", id: "frm-search", placeholder: "Source" %>
+                              <%= text_field_tag "search[][source]", nil, class: "form-control", id: "frm-search", placeholder: "Source" %>
                             </div>
                           </div>
                           <div class="col-xs-3">
@@ -28,7 +28,7 @@
                               <label for="to-search">
                                 To
                               </label>
-                              <%= text_field_tag "search[destination]", nil, class: "form-control", id: "to-search", placeholder: "Destination" %>
+                              <%= text_field_tag "search[][destination]", nil, class: "form-control", id: "to-search", placeholder: "Destination" %>
                             </div>
                           </div>
                           <div class="col-xs-2">
@@ -37,7 +37,7 @@
                                 Date
                               </label>
                               <div class="input-group date">
-                              <%= text_field_tag "search[date]", nil, class: "form-control", id: "hm-date", placeholder: "mm/dd/yyyy", data: {provide: "datepicker"}  %>
+                              <%= text_field_tag "search[][date]", nil, class: "form-control", id: "hm-date", placeholder: "mm/dd/yyyy", data: {provide: "datepicker"}  %>
                               <span class="input-group-addon">
                                 <i class="fa fa-calendar"></i>
                               </span>
@@ -49,7 +49,7 @@
                               <label for="hm-cbm">
                                 Cbm
                               </label>
-                              <%= text_field_tag "search[cbm]", nil, class: "form-control", id: "hm-cbm", placeholder: "Cbm" %>
+                              <%= text_field_tag "search[][cbm]", nil, class: "form-control", id: "hm-cbm", placeholder: "Cbm" %>
                             </div>
                           </div>
                           <div class="col-xs-2">
@@ -57,7 +57,7 @@
                               <label for="hm-weight">
                                 Kg
                               </label>
-                              <%= text_field_tag "search[weight]", nil, class: "form-control", id: "hm-weight", placeholder: "Weight" %>
+                              <%= text_field_tag "search[][weight]", nil, class: "form-control", id: "hm-weight", placeholder: "Weight" %>
                             </div>
                           </div>
                         </div>
@@ -69,7 +69,7 @@
                     </div>
                   </div>
                   <div class="form-group text-center seperator-20">
-                    <%= submit_tag 'Search', id: "home-search", class: "btn btn-primary"%>
+                    <%= submit_tag 'Search', id: "home-search", class: "btn btn-primary" %>
                   </div>
                 <%end%>
               </div>
