--- a/app/views/freights/guest_user_sign_up.html.erb
+++ b/app/views/freights/guest_user_sign_up.html.erb
@@ -4,14 +4,40 @@
 
 Your contact details will only be used to secure your price guarantee.
 
-<div>
-  <p class="notice"><%= notice %></p>
-  <%= form_for User.new, url: register_guest_user_path do |f| %>
-    <%= f.text_field :company_name %>
-    <%= f.text_field :first_name%>
-    <%= f.text_field :last_name%>
-    <%= f.email_field :email%>
-    <%= f.text_field :phone_number%>
-    <%= f.submit "SEE PRICES NOW!"%>
-  <% end %>
+<div class="row">
+  <div class="form-horizontal col-xs-12">
+    <p class="notice"><%= notice %></p>
+    <%= form_for User.new, url: register_guest_user_path do |f| %>
+        <div class="form-group">
+          <div class="col-xs-9">
+            <%= f.text_field :company_name,{placeholder: "Company Name", required: :required} %>
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="col-xs-9">
+            <%= f.text_field :first_name,{placeholder: "First Name",required: :required} %>
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="col-xs-9">
+            <%= f.text_field :last_name,{placeholder: "Last Name",required: :required}%>
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="col-xs-9">
+            <%= f.email_field :email, {placeholder: "Email", required: :required}%>
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="col-xs-9">
+            <%= f.text_field :phone_number, {placeholder: "Phone Number",required: :required}%>
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="col-xs-9">
+            <%= f.submit "SEE PRICES NOW!"%>
+          </div>
+        </div>
+    <% end %>
+  </div>
 </div>
