--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,6 @@
   <%= render :partial => "layouts/header" %>
   <%= render :partial => "layouts/side_bar" %>
   <%= yield %>
-  <%= render partial: "layouts/footer"%>
+  <%#= render partial: "layouts/footer"%>
 </body>
 </html>
