--- a/app/views/home/landing.html.erb
+++ b/app/views/home/landing.html.erb
@@ -20,7 +20,7 @@
                               <label for="frm-search">
                                 From
                               </label>
-                              <%= country_select( "user", "source", {}, { class: 'form-control selecter', placeholder: "Source", id: "frm-search", name: "search[][source]"}) %>
+                              <%= country_select( "user", "source", {selected: session['search']['source']}, { class: 'form-control selecter', placeholder: "Source", id: "frm-search", name: "search[][source]"}) %>
                             </div>
                           </div>
                           <div class="col-xs-3">
@@ -28,7 +28,7 @@
                               <label for="to-search">
                                 To
                               </label>
-                              <%= country_select( "user", "destination", {}, { class: 'form-control selecter', placeholder: "Source", id: "frm-search", name: "search[][destination]"}) %>
+                              <%= country_select( "user", "destination", {selected: session['search']['destination']}, { class: 'form-control selecter', placeholder: "Source", id: "frm-search", name: "search[][destination]"}) %>
                             </div>
                           </div>
                           <div class="col-xs-2">
@@ -37,7 +37,7 @@
                                 Date
                               </label>
                               <div class="input-group date">
-                              <%= text_field_tag "search[][date]", nil, class: "form-control", id: "hm-date", placeholder: "mm/dd/yyyy", data: {provide: "datepicker"}  %>
+                              <%= text_field_tag "search[][date]", session['search']['date'], class: "form-control", id: "hm-date", placeholder: "mm/dd/yyyy", data: {provide: "datepicker"}  %>
                               <span class="input-group-addon">
                                 <i class="fa fa-calendar"></i>
                               </span>
@@ -49,7 +49,7 @@
                               <label for="hm-cbm">
                                 Cbm
                               </label>
-                              <%= text_field_tag "search[][cbm]", nil, class: "form-control", id: "hm-cbm", placeholder: "Cbm" %>
+                              <%= text_field_tag "search[][cbm]", session['search']['cbm'], class: "form-control", id: "hm-cbm", placeholder: "Cbm" %>
                             </div>
                           </div>
                           <div class="col-xs-2">
@@ -57,7 +57,7 @@
                               <label for="hm-weight">
                                 Kg
                               </label>
-                              <%= text_field_tag "search[][weight]", nil, class: "form-control", id: "hm-weight", placeholder: "Weight" %>
+                              <%= text_field_tag "search[][weight]", session['search']['weight'], class: "form-control", id: "hm-weight", placeholder: "Weight" %>
                             </div>
                           </div>
                         </div>
