Created draft booking page

--- a/app/views/layouts/_side_bar.html.erb
+++ b/app/views/layouts/_side_bar.html.erb
@@ -5,8 +5,8 @@
       <a class="list-group-item active" href="#">New Booking</a>
       <a class="list-group-item" href="#">Active Booking</a>
       <a class="list-group-item" href="#">Booking on Hold</a>
-      <a class="list-group-item" href="#">Draft Booking</a>
+      <%= link_to "Draft Booking", draft_bookings_bookings_path, {class: "list-group-item"} %>
       <a class="list-group-item" href="#">Archived Bookings</a>
-    </div>  
+    </div>
   </aside>
 </div>
