--- a/app/views/freights/new.html.erb
+++ b/app/views/freights/new.html.erb
@@ -48,7 +48,7 @@
                             <div class="col-xs-6">
                               <div class="col-md-3">Date From</div>
                               <div class="col-md-6 input-group date">
-                                <%= f.text_field "start_date", class: "form-control", id: "hm-date", placeholder: "mm/dd/yyyy", data: {provide: "datepicker"}  %>
+                                <%= f.text_field "start_date", class: "form-control", id: "hm-date", placeholder: "yyyy/mm/dd" %>
                                 <span class="input-group-addon">
                                 <i class="fa fa-calendar"></i>
                               </span>
@@ -57,7 +57,7 @@
                             <div class="col-xs-6">
                               <div class="col-md-3">Date To</div>
                               <div class="col-md-6 input-group date">
-                                <%= f.text_field "end_date", class: "form-control", id: "hm-date", placeholder: "mm/dd/yyyy", data: {provide: "datepicker"}  %>
+                                <%= f.text_field "end_date", class: "form-control", id: "hm-date", placeholder: "yyyy/mm/dd" %>
                                 <span class="input-group-addon">
                                 <i class="fa fa-calendar"></i>
                               </span>
@@ -89,7 +89,7 @@
                           <div class="col-xs-6">
                             <div class="col-md-3">Cut Off Date</div>
                             <div class="col-md-6 input-group date">
-                              <%= f.text_field "cut_off_date", class: "form-control", id: "hm-date", placeholder: "mm/dd/yyyy", data: {provide: "datepicker"}  %>
+                              <%= f.text_field "cut_off_date", class: "form-control", id: "hm-date", placeholder: "yyyy/mm/dd" %>
                               <span class="input-group-addon">
                                 <i class="fa fa-calendar"></i>
                               </span>
@@ -100,7 +100,7 @@
                         <div class="row form-group">
                           <div class="col-xs-6">
                             <div class="col-md-3">freight_type</div>
-                            <div class="col-md-6"> <%= f.text_field "freight_type", class: "form-control", id: "hm-weight", placeholder: "freight_type" %></div>
+                            <div class="col-md-6"> <%= f.select "freight_type", ['sea', 'air'],{}, {class: "form-control selecter", id: "hm-weight"} %></div>
                           </div>
                         </div>
 
