Added archived booking page.

--- a/app/views/layouts/_side_bar.html.erb
+++ b/app/views/layouts/_side_bar.html.erb
@@ -6,7 +6,7 @@
       <a class="list-group-item" href="#">Active Booking</a>
       <a class="list-group-item" href="#">Booking on Hold</a>
       <%= link_to "Draft Booking", draft_bookings_bookings_path, {class: "list-group-item"} %>
-      <a class="list-group-item" href="#">Archived Bookings</a>
+      <%= link_to "Archived Bookings", archived_bookings_bookings_path, {class: "list-group-item"} %>
     </div>
   </aside>
 </div>
