--- a/app/views/bookings/draft_bookings.html.erb
+++ b/app/views/bookings/draft_bookings.html.erb
@@ -26,7 +26,7 @@
               <%= link_to "RESUME BOOKING", get_quote_booking_path(booking), {class: 'btn btn-success'} %>
             </div>
             <div style="margin: 10px 0px">
-              <%= link_to "DELETE BOOKING", archive_booking_path(booking), {method: :delete, class: 'btn btn-danger'} %>
+              <%= link_to "DELETE BOOKING", booking_path(booking), {method: :delete, class: 'btn btn-danger'} %>
             </div>
           </div>
         </div>
