Added rating jquery and basic validation.

--- a/app/views/rates/_form.html.erb
+++ b/app/views/rates/_form.html.erb
@@ -11,7 +11,7 @@
         <%= f.radio_button :is_courteous, false %> No
     </p>
 
-    <p>Forwarder rating (1 to 5 stars):</p>
+    <p>Forwarder rating (1 to 5 stars): <span class="star-rating"></span> </p>
     <p>Tell others about this forwarder:</p>
     <p>(E.g. customer service experience, timeliness, value for money)</p>
     <p>
@@ -26,3 +26,13 @@
     </p>
     <%= f.submit "SUBMIT FEEDBACK" %>
 <% end  %>
+
+<script>
+  $(".star-rating").raty(
+      {
+        path: '/assets/',
+        scoreName: 'rate[score]',
+        hints : ['Awful', 'Poor', 'Fair', 'Good', 'Excellent']
+      }
+  );
+</script>
