--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,11 +1,11 @@
 <header class="navbar navbar-fixed-top header-nav">
   <div class="container-fluid">
     <button type="button" class="navbar-left aside-toggle" id="btn-aside">
-      <ul class="move-bars">
-        <li></li>
-        <li></li>
-        <li></li>
-      </ul>
+     <span class="move-bars">
+       <span></span>
+       <span></span>
+       <span></span>
+     </span>
     </button>
     <%=link_to "Blue Compass", root_path, {class: 'navbar-brand'} %>
     <div class="pull-right">
